# union-api.cmake

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
cmake/: CMakeLists.txt  UnionAPIConfig.cmake.in
cmake/gothic-api/: CMakeLists.txt
cmake/union-api/: CMakeLists.txt  union-api.cmake
